# static-trie-based-encoding

./: CMakeLists.txt  CMakeLists.txt.in  README.md  coding.h  main.cpp  memblock.h  stbe.cpp  stbe.h
include/: memblock.h  stbe.h  trie.h
include/util/: port.h
src/: memblock.cpp  stbe.cpp  trie.cpp
src/util/: coding.cpp
tests/: custom_struct_test.cpp  memblock_test.cpp  stbe_test.cpp  test_param.h
